<resources>
    <string name="app_name">Vinyls</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_performers">Artistas</string>
    <string name="album_cover_description">Album cover</string>
    <string name="performer_image_description">Performer image</string>
    <string name="artistas_card_description">Artistas</string>
    <string name="collector_image_description">Collector image</string>
    <string name="album_search_hint">Busca un álbum</string>
    <string name="collector_detail_title">Coleccionista</string>
    <string name="collector_detail_albums_title">Álbumes</string>
    <string name="collector_detail_comments_title">Comentarios</string>
    <string name="no_items_to_show">No hay elementos para mostrar</string>
    <string name="create_album">Crear Álbum</string>
    <string name="add_comment">Agregar un comentario al álbum</string>
    <string name="empty_star">Estrella vacía</string>
    <string name="comment_placeholder">¿Qué tal te parece el álbum?</string>
    <string name="cancel_button">Cancelar</string>
    <string name="add_button">Agregar</string>
    <string name="add_a_comment">Agrega un comentario</string>
    <string name="rating_required">* La calificación es requerida</string>
    <string-array name="genre_array">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string-array name="record_label_array">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
</resources>