<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        >

        <!-- Título -->
        <TextView
            android:id="@+id/addCommentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_comment"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="16dp" />

        <!-- Estrellas -->
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:rating="0"
             />

<!--        Error de estrellas -->
        <TextView
            android:id="@+id/ratingError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_required"
            android:textSize="14sp"
            android:textColor="@color/purple_500"
            android:visibility="gone"
            />

        <!-- Caja de texto -->
        <EditText
            android:id="@+id/etComment"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/comment_placeholder"
            android:background="@drawable/edit_text_background"
            android:gravity="top|start"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp" />

        <!-- Botones -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="fill">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/material_dynamic_neutral_variant90"
                android:text="@string/cancel_button"
                android:textColor="@color/purple_500"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_500"
                android:text="@string/add_button"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
