<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="collectorDetail"
            type="com.misw4203.vinyls.models.CollectorDetail" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.collector.CollectorDetailFragment">

        <!-- Content -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Collector Details -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp">

                    <!-- Profile Image -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:elevation="10dp"
                        app:cardCornerRadius="16dp">

                        <ImageView
                            android:id="@+id/profileImage"
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:background="?attr/colorSurfaceVariant"
                            android:contentDescription="@string/collector_image_description"
                            android:scaleType="centerCrop"
                            app:imageUrl="@{collectorDetail.image}" />
                    </androidx.cardview.widget.CardView>

                    <!-- Collector Info -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/collectorName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="@{collectorDetail.name}"
                            android:textAppearance="?attr/textAppearanceHeadlineLarge" />

                        <TextView
                            android:id="@+id/collectorEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:drawablePadding="8dp"
                            android:text="@{collectorDetail.email}"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            app:drawableStartCompat="@drawable/ic_mail" />

                        <TextView
                            android:id="@+id/collectorPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:text="@{collectorDetail.telephone}"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            app:drawableStartCompat="@drawable/ic_phone" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Albums Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorSurfaceVariant"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:id="@+id/albumsHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/collector_detail_albums_title"
                        android:textAppearance="?attr/textAppearanceTitleLarge"
                        app:drawableEndCompat="@drawable/ic_arrow_forward" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/albumsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:nestedScrollingEnabled="false"
                        android:scrollbars="vertical" />
                    <TextView
                        android:id="@+id/noAlbumsView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_items_to_show"

                        android:gravity="center"

                        android:textAppearance="?attr/textAppearanceBody1"
                        android:layout_marginVertical="64dp"/>

                </LinearLayout>

                <!-- Comments Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:id="@+id/commentsHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/collector_detail_comments_title"
                        android:textAppearance="?attr/textAppearanceTitleLarge"
                        app:drawableEndCompat="@drawable/ic_arrow_forward" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/commentsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:scrollbars="vertical" />
                    <TextView
                        android:id="@+id/noCommentsView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_items_to_show"

                        android:gravity="center"

                        android:textAppearance="?attr/textAppearanceBody1"
                        android:layout_marginVertical="64dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>